--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,22 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.header {
+  display:flex;
+  gap: 52px;
+  align-items: center;
+  justify-content: space-around;
+}
+.berry,
+.saffron,
+.chilli,
+.pepper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border: 2px solid red;
+  width: 200px;
+  border-radius: 10px;
 }
