--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -23,4 +24,30 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+.left-links,
+.right-links {
+  display: flex;
+  gap: 16px;
+  list-style-type: none;
+  padding: 16px;
+}
+a {
+  text-decoration: none;
+  color: grey;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+.footer {
+  background-color:#eeeeee;
+  margin-top: 350px;
 }
